<resources>
    <string name="action_account">Account</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="backdrop_description">Backdrop</string>
    <string name="access_create_account_label">Create Account</string>
    <string name="access_biometric_unlock_title">Biometric Unlock</string>
    <string name="access_biometric_unlock_description">Unlock your keys with your fingerprint</string>
    <string name="account_alias">Alias</string>
    <string name="account_public_key">Public Key</string>
    <string name="account_customer">Customer</string>
    <string name="account_not_registered">Keys Not Registered</string>
    <string name="account_subscription">Subscription</string>
    <string name="account_not_subscribed">Keys Not Subscribed</string>
    <string name="account_register">Register Keys</string>
    <string name="account_subscribe">Subscribe Keys</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_action">Create</string>
    <string name="create_account_label">Create a new account</string>
    <string name="create_account_alias">Alias</string>
    <string name="create_account_email">Email</string>
    <string name="create_account_new_password">New Password</string>
    <string name="create_account_confirm_password">Confirm Password</string>
    <string name="create_account_step_1">Step 1: Alias</string>
    <string name="create_account_step_2">Step 2: Email</string>
    <string name="create_account_step_3">Step 3: Password</string>
    <string name="create_account_step_4">Step 4: Payment</string>
    <string name="create_account_step_5">Step 5: Legal</string>
    <string name="error_report">Report</string>
    <string name="error_connection">Failed to connect to AletheiaWare.com</string>
    <string name="error_create_account">Failed to create account</string>
    <string name="error_decoding_image">Failed to decode image</string>
    <string name="error_decoding_video">Failed to decode video</string>
    <string name="error_downloading">Failed to download file</string>
    <string name="error_export_key_pair">Failed to export keys</string>
    <string name="error_import_key_pair">Failed to import keys</string>
    <string name="error_listing">Failed to list files</string>
    <string name="error_loading_metadata">Failed to load metadata from intent</string>
    <string name="error_loading_file">Failed to load file</string>
    <string name="error_reading_uri">Failed to read URI</string>
    <string name="error_unlock_keys">Failed to unlock keys</string>
    <string name="error_uploading">Failed to upload file</string>
    <string name="error_mining">Failed to mine file</string>
    <string name="error_no_camera">No camera found on this device</string>
    <string name="error_alias_read_failed">Could not read Alias blockchain</string>
    <string name="error_alias_invalid">Invalid alias</string>
    <string name="error_alias_taken">Alias already registered</string>
    <string name="error_email_invalid">Invalid email</string>
    <string name="error_finance_read_failed">Could not read Finance blockchain</string>
    <string name="error_password_short">Password must be at least 12 characters</string>
    <string name="error_password_lengths_differ">Password and confirm password differ in length</string>
    <string name="error_passwords_differ">Password and confirm password do not match</string>
    <string name="error_stripe_invalid_payment">Invalid payment information</string>
    <string name="error_terms_of_service_required">You must read, understand, and agree to the Terms of Service</string>
    <string name="error_privacy_policy_required">You must read, understand, and agree to the Privacy Policy</string>
    <string name="error_beta_test_agreement_required">You must read, understand, and agree to the Beta Test Agreement</string>
    <string name="error_biometric_unlock">Failed to unlock keys with biometric unlock</string>
    <string name="error_biometric_enroll">Failed to set up biometric unlock</string>
    <string name="error_registering">Failed to register</string>
    <string name="error_subscribing">Failed to subscribe</string>
    <string name="error_meta_read_failed">Failed to read metadata</string>
    <string name="error_shared_meta_read_failed">Failed to read shared metadata</string>
    <string name="legalese_label">SPACE is made available by <a href="https://aletheiaware.com">Aletheia Ware LLC</a> under the <a href="https://aletheiaware.com/terms-of-service.html">Terms of Service"</a> and <a href="https://aletheiaware.com/privacy-policy.html">Privacy Policy</a></string>
    <string name="legalese_terms_of_service">I understand, and agree to the Terms of Service</string>
    <string name="legalese_privacy_policy">I understand, and agree to the Privacy Policy</string>
    <string name="legalese_beta_label">This beta version of SPACE is made available under the <a href="https://aletheiaware.com/space-beta-test-agreement.html">Beta Test Agreement</a></string>
    <string name="legalese_beta_test_agreement">I understand, and agree to the Beta Test Agreement</string>
    <string name="main_add">Add</string>
    <string name="menu_account">Account</string>
    <string name="menu_download">Download</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_tag">Tag</string>
    <string name="mime_type_text_plain">text/plain</string>
    <string name="mine_action">Mine</string>
    <string name="notification_channel_name_local">Local Mining</string>
    <string name="notification_channel_name_remote">Remote Mining</string>
    <string name="notification_channel_name_download">Downloads</string>
    <string name="notification_channel_description_local">Ongoing Local Mining</string>
    <string name="notification_channel_description_remote">Ongoing Remote Mining</string>
    <string name="notification_channel_description_download">Ongoing Downloads</string>
    <string name="payment_action">Pay</string>
    <string name="payment_amount">Amount</string>
    <string name="payment_email">Email</string>
    <string name="title_activity_access">Access</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_compose_document">Compose Document</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_upload">Upload File</string>
    <string name="title_dialog_error">Error</string>
    <string name="title_dialog_add_record">Add Record</string>
    <string name="title_dialog_select_miner">Select Miner</string>
    <string name="title_dialog_creating_account">Creating Account</string>
    <string name="title_dialog_loading_document">Loading Document</string>
    <string name="title_dialog_preview">Preview</string>
    <string name="title_dialog_share">Share</string>
    <string name="title_dialog_tag">Tag</string>
    <string name="title_notification_local">Mining Locally</string>
    <string name="title_notification_remote">Mining Remotely</string>
    <string name="title_notification_download">Downloading</string>
    <string name="unlock_keys">Unlock Keys</string>
    <string name="unlock_keys_action">Unlock</string>
    <string name="unlock_keys_alias">Alias</string>
    <string name="unlock_keys_password">Password</string>
    <string name="unlock_keys_label">Unlock your keys by entering your password</string>
    <string name="import_keys">Import Keys</string>
    <string name="import_keys_action">Import</string>
    <string name="import_keys_alias">Alias</string>
    <string name="import_keys_access_code">Access Code</string>
    <string name="import_keys_label">Import your keys from another device.</string>
    <string name="export_keys">Export Keys</string>
    <string name="export_keys_action">Export</string>
    <string name="export_keys_alias">Alias</string>
    <string name="export_keys_access_code">Access Code</string>
    <string name="export_keys_label">Export your keys to another device.</string>
    <string name="delete_keys">Delete Keys</string>
    <string name="delete_keys_action">Delete</string>
    <string name="delete_keys_legalese">Deleting your keys from this device will not delete your data from the blockchain, however it will remove this device\'s access to that data. Once deleted, keys are not recoverable.</string>
    <string name="switch_keys">Switch Keys</string>
    <string name="switch_keys_action">Switch</string>
    <string name="upload_image">The image to upload</string>
    <string name="upload_video">The video to upload</string>
    <string name="empty_list">No documents found - add your first using the button below</string>
    <string name="no_data">No data</string>
    <string name="default_text_preview">Abc</string>
    <string name="preview_name">Document</string>
    <string name="preview_action">Generate</string>
    <string name="preview_document_label">Previews are used instead of downloading the whole document</string>
    <string name="share_action">Share</string>
    <string name="share_alias">Alias</string>
    <string name="share_name">Document</string>
    <string name="share_document_label">Sharing a document is non-reversible</string>
    <string name="tag_action">Tag</string>
    <string name="tag_name">Document</string>
    <string name="tag_value">Value</string>
    <string name="tag_reason">Reason</string>
    <string name="tag_document_label">Tags are used to search and filter documents</string>
    <string name="space_logo">Space Logo</string>
    <string name="aletheia_ware_llc_logo">Aletheia Ware LLC Logo</string>
    <string name="preference_ask_each_time">Ask Each Time</string>
    <string name="preference_general_title">General</string>
    <string name="preference_sort_key">list_sort_preference</string>
    <string name="preference_sort_title">Sort</string>
    <string name="preference_sort_description">The order in which your documents are sorted</string>
    <string name="preference_sort_chronological">Chronological (Oldest First)</string>
    <string name="preference_cache_title">Cache</string>
    <string name="preference_cache_size_key">cache_size_preference</string>
    <string name="preference_cache_size_title">Cache Size</string>
    <string name="preference_cache_purge_key">cache_purge_preference</string>
    <string name="preference_cache_purge_title">Purge Cache</string>
    <string name="preference_cache_purge_description">Delete all data from cache</string>
    <string name="preference_mining_title">Mining</string>
    <string name="preference_miner_key">miner_preference</string>
    <string name="preference_miner_title">Default Miner</string>
    <string name="preference_miner_description">Determines where blocks are mined</string>
    <string name="preference_security_title">Security</string>
    <string name="preference_biometric_key">biometric_preference</string>
    <string name="preference_biometric_title">Biometric Unlock</string>
    <string name="preference_biometric_description">Unlock your keys with your fingerprint</string>
    <string name="preference_about_title">About</string>
    <string name="preference_app_version_key">app_version_preference</string>
    <string name="preference_app_version_title">App Version</string>
    <string name="preference_support_key">support_preference</string>
    <string name="preference_support_title">Support</string>
    <string name="preference_support_description">Contact Aletheia Ware for support or to submit feedback</string>
</resources>