<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2019 Aletheia Ware LLC

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory android:title="@string/preference_general_title">

        <android.support.v7.preference.ListPreference
            android:defaultValue="2"
            android:entries="@array/preference_sort_options"
            android:entryValues="@array/preference_sort_values"
            android:key="@string/preference_sort_key"
            android:summary="@string/preference_sort_description"
            android:title="@string/preference_sort_title" />

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory android:title="@string/preference_mining_title">

        <android.support.v7.preference.ListPreference
            android:defaultValue="1"
            android:entries="@array/preference_miner_options"
            android:entryValues="@array/preference_miner_values"
            android:key="@string/preference_miner_key"
            android:summary="@string/preference_miner_description"
            android:title="@string/preference_miner_title" />

        <!-- TODO add default miner hostname -->

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory android:title="@string/preference_cache_title">

        <android.support.v7.preference.Preference
            android:key="@string/preference_cache_size_key"
            android:title="@string/preference_cache_size_title" />

        <android.support.v7.preference.Preference
            android:key="@string/preference_cache_purge_key"
            android:summary="@string/preference_cache_purge_description"
            android:title="@string/preference_cache_purge_title" />

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory android:title="@string/preference_security_title">

        <android.support.v7.preference.CheckBoxPreference
            android:key="@string/preference_biometric_key"
            android:summary="@string/preference_biometric_description"
            android:title="@string/preference_biometric_title" />

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory android:title="@string/preference_about_title">

        <android.support.v7.preference.Preference
            android:key="@string/preference_app_version_key"
            android:title="@string/preference_app_version_title" />

        <android.support.v7.preference.Preference
            android:key="@string/preference_support_key"
            android:summary="@string/preference_support_description"
            android:title="@string/preference_support_title" />

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>