<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2018 Aletheia Ware LLC

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:padding="@dimen/activity_padding"
    tools:context=".ui.AccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:labelFor="@id/account_alias_text"
            android:text="@string/account_alias"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_secondary_size" />

        <TextView
            android:id="@+id/account_alias_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:labelFor="@id/account_public_key_text"
            android:text="@string/account_public_key"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_secondary_size" />

        <TextView
            android:id="@+id/account_public_key_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:labelFor="@id/account_customer_text"
            android:text="@string/account_customer"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_secondary_size" />

        <TextView
            android:id="@+id/account_customer_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary_size" />

        <Button
            android:id="@+id/account_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/view_margin"
            android:background="@color/accent"
            android:padding="10dp"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary_size"
            android:text="@string/account_register"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:labelFor="@id/account_subscription_text"
            android:text="@string/account_subscription"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_secondary_size" />

        <TextView
            android:id="@+id/account_subscription_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary_size" />

        <Button
            android:id="@+id/account_subscribe_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/view_margin"
            android:background="@color/accent"
            android:padding="10dp"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary_size"
            android:text="@string/account_subscribe"
            android:visibility="gone" />

        <Button
            android:id="@+id/account_export_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/view_margin"
            android:background="@color/accent"
            android:padding="10dp"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary_size"
            android:text="@string/export_keys" />

        <Button
            android:id="@+id/account_switch_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/view_margin"
            android:background="@color/accent"
            android:padding="10dp"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary_size"
            android:text="@string/switch_keys" />

        <Button
            android:id="@+id/account_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/view_margin"
            android:background="@color/warning"
            android:padding="10dp"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary_size"
            android:text="@string/delete_keys" />

    </LinearLayout>

</ScrollView>