<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2019 Aletheia Ware LLC

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:labelFor="@id/tag_name"
            android:text="@string/tag_name"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_secondary_size"/>

        <TextView
            android:id="@+id/tag_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:labelFor="@id/tag_value"
            android:text="@string/tag_value"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_secondary_size"/>

        <AutoCompleteTextView
            android:id="@+id/tag_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:imeOptions="actionDone"
            android:inputType="text|textNoSuggestions"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary_size">
            <requestFocus/>
        </AutoCompleteTextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:labelFor="@id/tag_reason"
            android:text="@string/tag_reason"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_secondary_size"/>

        <EditText
            android:id="@+id/tag_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:imeOptions="actionDone"
            android:inputType="text|textCapSentences|textAutoComplete|textAutoCorrect"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:text="@string/tag_document_label"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_secondary_size"/>

    </LinearLayout>

</ScrollView>
