<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2018 Aletheia Ware LLC

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:labelFor="@id/import_alias_text"
        android:text="@string/import_keys_alias"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_secondary_size"/>

    <EditText
        android:id="@+id/import_alias_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:inputType="text|textNoSuggestions"
        android:imeOptions="actionDone"
        android:gravity="center"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_primary_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:labelFor="@id/import_access_code_text"
        android:text="@string/import_keys_access_code"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_secondary_size"/>

    <EditText
        android:id="@+id/import_access_code_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:inputType="text|textNoSuggestions"
        android:imeOptions="actionDone"
        android:gravity="center"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_primary_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:text="@string/import_keys_label"
        android:textColor="@color/text_secondary" />

</LinearLayout>