<?xml version="1.0" encoding="utf-8"?><!--
Copyright 2018 Aletheia Ware LLC

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:fitsSystemWindows="false"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tool:context=".AccessActivity">

    <ImageButton
        android:id="@+id/space_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/space_logo"
        android:padding="5dp"
        android:tint="@color/text_primary"
        app:srcCompat="@drawable/space_logo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/view_margin"
        android:background="@color/accent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/access_unlock_keys_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:orientation="vertical"
        android:visibility="gone" />

    <View
        android:id="@+id/access_unlock_keys_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/view_margin"
        android:background="@color/accent"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding">

        <Button
            android:id="@+id/access_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:text="@string/new_account"
            android:textColor="@color/text_primary" />

        <Button
            android:id="@+id/access_import_keys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:text="@string/import_keys"
            android:textColor="@color/text_primary" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/view_margin"
        android:background="@color/accent" />

    <ImageButton
        android:id="@+id/aletheia_ware_llc_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/aletheia_ware_llc_logo"
        android:padding="5dp"
        android:tint="@color/text_primary"
        app:srcCompat="@drawable/aletheia_ware_llc_logo" />

</LinearLayout>